# foldreport

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  PLAN.md  PLAN_01.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
examples/: fetch_afdb.py  make_demo.py
examples/afdb_demo/: AF-P00698-F1-metadata.json  AF-P00698-F1-model_v6.cif  AF-P00698-F1-predicted_aligned_error_v6.json  AF-P01308-F1-metadata.json  AF-P01308-F1-model_v6.cif  AF-P01308-F1-predicted_aligned_error_v6.json  AF-P0CG48-F1-metadata.json  AF-P0CG48-F1-model_v6.cif  AF-P0CG48-F1-predicted_aligned_error_v6.json  AF-P69905-F1-metadata.json  AF-P69905-F1-model_v6.cif  AF-P69905-F1-predicted_aligned_error_v6.json
examples/demo/af3_server/: fold_demo_complex_full_data_0.json  fold_demo_complex_full_data_1.json  fold_demo_complex_model_0.cif  fold_demo_complex_model_1.cif  fold_demo_complex_summary_confidences_0.json  fold_demo_complex_summary_confidences_1.json  terms_of_use.md
examples/demo/colabfold/: cite.bibtex  demo_complex_scores_rank_001_alphafold2_multimer_v3_model_3_seed_000.json  demo_complex_scores_rank_002_alphafold2_multimer_v3_model_1_seed_000.json
examples/multimodel_demo/: README.md  ubiquitin.fasta
examples/multimodel_demo/af3_server/: fold_2026_06_20_22_33_full_data_0.json  fold_2026_06_20_22_33_full_data_1.json  fold_2026_06_20_22_33_full_data_2.json  fold_2026_06_20_22_33_full_data_3.json  fold_2026_06_20_22_33_full_data_4.json  fold_2026_06_20_22_33_job_request.json  fold_2026_06_20_22_33_model_0.cif  fold_2026_06_20_22_33_model_1.cif  fold_2026_06_20_22_33_model_2.cif  fold_2026_06_20_22_33_model_3.cif  fold_2026_06_20_22_33_model_4.cif
examples/multimodel_demo/alphafold_db/: AF-P62975-F1-metadata.json  AF-P62975-F1-model_v6.cif  AF-P62975-F1-predicted_aligned_error_v6.json
examples/multimodel_demo/boltz/: .gitkeep
examples/multimodel_demo/colabfold/: config.json  log.txt  test_7686d.csv  test_7686d_predicted_aligned_error_v1.json  test_7686d_scores_rank_001_alphafold2_ptm_model_4_seed_000.json  test_7686d_scores_rank_002_alphafold2_ptm_model_2_seed_000.json  test_7686d_scores_rank_003_alphafold2_ptm_model_3_seed_000.json  test_7686d_scores_rank_004_alphafold2_ptm_model_1_seed_000.json  test_7686d_scores_rank_005_alphafold2_ptm_model_5_seed_000.json
examples/multimodel_demo/openfold3/: .gitkeep  openfold3.json
foldreport/: __init__.py  cli.py  figures.py  metrics.py  models.py
foldreport/parsers/: __init__.py  af3_server.py  alphafold_db.py  base.py  boltz.py  colabfold.py  openfold3.py
foldreport/report/: __init__.py  builder.py  template.html
tests/: conftest.py  make_fixtures.py  test_alphafold_db.py  test_cli.py  test_colabfold_parser.py  test_edge_cases.py  test_figures_export.py  test_metrics_and_figures.py  test_other_parsers.py  test_provenance.py  test_report.py
tests/data/af3_server/: fold_mycomplex_full_data_0.json  fold_mycomplex_model_0.cif  (+5 more)
(+45 files in other folders)
