[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "foldreport"
dynamic = ["version"]
description = "Unify structure-prediction outputs (ColabFold, AlphaFold 3 Server, Boltz) into a single self-contained HTML report ranked by confidence."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sergio Gracia" }]
keywords = ["alphafold", "colabfold", "boltz", "protein-structure", "plddt", "pae", "bioinformatics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "gemmi>=0.6",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
foldreport = "foldreport.cli:main"

[project.urls]
Homepage = "https://github.com/sergio-gracia/foldreport"
Issues = "https://github.com/sergio-gracia/foldreport/issues"

[tool.setuptools_scm]
# Version is derived from git tags (e.g. tag "v0.3.0" -> version "0.3.0").
# A GitHub Release publishes its tag, which setuptools-scm reads at build time,
# so the version lives in exactly one place: the tag.

[tool.setuptools.packages.find]
include = ["foldreport*"]

[tool.setuptools.package-data]
"foldreport.report" = ["template.html", "3Dmol-min.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
